<resources>
    <string name="app_name">TravelTour</string>
    <string name="title_activity_main">TravelTour</string>
    <string name="action_settings">Settings</string>
    <string name="s_pref_id">sh_preference_uID</string>
    <string name="s_pref_email_verified">sh_pref_email_verified</string>
    <string name="s_pref_file">com.ygaps.travelapp.sh_preference_file</string>
    <string name="s_pref_login_status">com.ygaps.travelapp.sh_preference_login_status</string>
    <string name="s_pref_name">sh_preference_name</string>
    <string name="s_pref_email">sh_preference_email</string>
    <string name="s_pref_date">sh_preference_date</string>
    <string name="s_pref_token">sh_preference_token</string>
    <string name="title_activity_tour">TourActivity</string>
    <string name="public_trip_toggle_on">Make Private</string>
    <string name="public_trip_toggle_off">Make Public</string>
    <string name="facebook_app_id">423053111709310</string>
    <string name="fb_login_protocol_scheme">fb423053111709310</string>
    <string name="navigation_drawer_travel">Travel</string>
    <string name="navigation_drawer_about_us">About Us</string>
    <string name="navigation_drawer_signout">Sign Out</string>
    <string name="navigation_drawer_my_friends">My Friends</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="my_trip">My Trips</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_api_key">AIzaSyC6fb1JAvbtfDd_pXWmff_PDdHs_0rOh1s</string>
    <string name="title_activity_tour_maps">Map</string>
    <string name="title_activity_list_stop_point">List Stop Point</string>
    <string name="menuSP_list_stop_point">Information</string>
    <string name="menuSP_rating_stop_point">Rating</string>
    <string name="menuSP_delete_stop_point">Remove</string>
    <string name="title_detail_tour">Detail tour</string>
</resources>
