<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        <item
            android:icon="@drawable/ic_directions_car_black"
            android:title="@string/navigation_drawer_travel" />
        <item
            android:icon="@drawable/ic_card_travel_black_24dp"
            android:title="@string/my_trip" />
        <item
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/navigation_drawer_my_friends" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:icon="@drawable/ic_about_us"
            android:title="@string/navigation_drawer_about_us" />
        <item
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/navigation_drawer_settings"/>
        <item
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/navigation_drawer_signout" />

    </group>

</menu>