<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_directions_car_black"
        android:title="@string/navigation_drawer_travel" />

    <item
        android:id="@+id/navigation_mytrips"
        android:icon="@drawable/ic_card_travel_black_24dp"
        android:title="@string/my_trip"  />
    <item
        android:id="@+id/navigation_stop"
        android:icon="@drawable/ic_account_balance_black_24dp"
        android:title="Stop Point" />

    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/ic_notifications_white"
        android:title="Notifycation" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/navigation_drawer_settings" />

</menu>